<resources>
    <string name="app_name">עולם הרכב</string>
    <string name="articles">כתבות</string>
    <string name="search">חיפוש</string>
    <string name="car_catalog">קטלוג רכב</string>
    <string name="about">אודות</string>
    <string name="title_activity_articales">articales</string>
    <string name="action_settings">Settings</string>
    <string name="main">מסך הבית</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="car_category_array">
        <item>הכל</item>
        <item>רכבים משפחתיים</item>
        <item>מיני</item>
        <item>גפונים</item>
        <item>גיפים</item>
        <item>רכבי מנהלים</item>
    </string-array>

    <string-array name="car_engine_volume_array">
        <item>הכל</item>
        <item>קטן מ - 1000</item>
        <item>גדול מ 1000 וקטן מ - 1500</item>
        <item>גדול מ - 1500 וקטן מ - 2000</item>
        <item>גדול מ - 2000</item>
    </string-array>

    <string-array name="car_hp_array">
        <item>הכל</item>
        <item>קטן מ - 100</item>
        <item>גדול מ 100 וקטן מ - 150</item>
        <item>גדול מ - 150 וקטן מ - 250</item>
        <item>גדול מ - 250</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
